[package]
name = "pra_lang_interface"
version = "0.1.0"
authors = ["Vojtěch Pejša <vojtechpejsa7@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pra-lang = { path="../../pra-lang"}
wasm-bindgen = {version = "0.2", features = ["serde-serialize"]}
js-sys = "*"
serde = { version = "1.0", features = ["derive"] }
